updated the cv with fewer pages, extra details were removed

--- a/section/awards.tex
+++ b/section/awards.tex
@@ -7,8 +7,8 @@
 
         \Item{\textbf{Reached final stage} of the 25\textsuperscript{th} \textbf{National Computer Olympiad} in Iran (the final competition was not held due to the COVID-19 pandemic), \emph{Mashhad, Iran}, 2020}
 
-        \Item{\textbf{Ranked 39\textsuperscript{th}} in \textbf{FUM Collegiate Programming Contest (FCPC 2019)} among more than 500 nationwide teams, \emph{Ferdowsi University of Mashhad, Mashhad, Iran}, 2019}
+        %\Item{\textbf{Ranked 39\textsuperscript{th}} in \textbf{FUM Collegiate Programming Contest (FCPC 2019)} among more than 500 nationwide teams, \emph{Ferdowsi University of Mashhad, Mashhad, Iran}, 2019}
 
-        \Item{Ranked within the \textbf{top 6\%} among approximately \textbf{160,000 participants} in the \textbf{Iranian University Entrance Exam} for Bachelor's degree in Computer Engineering, \emph{Mashhad, Iran}, 2016}
+        %\Item{Ranked within the \textbf{top 6\%} among approximately \textbf{160,000 participants} in the \textbf{Iranian University Entrance Exam} for Bachelor's degree in Computer Engineering, \emph{Mashhad, Iran}, 2016}
 
     \ListEnd 
