--- a/section/education.tex
+++ b/section/education.tex
@@ -10,9 +10,9 @@
         \ListStartLineBulletTiny
             \Item{\textbf{Last-two-year GPA:} 19.32/20 (3.96/4)}
             \Item{\textbf{CGPA:} 17.85/20 (3.64/4)}
-            \Item{\textbf{Thesis Title:} Implementing a classifier to recommend top 5 products in a recommender system}
-            \Item{\textbf{Thesis Grade:} 19/20 (4/4)}
-            \Item{\textbf{Thesis Description:} Used Matrix-Factorization Model-Based Collaborative-Filtering approach on \emph{MovieLens 20M dataset} to implement a recommender system which recommends top 5 movies for every single user, Under the supervision of \emph{Dr. Javad Hamidzadeh}}
+            \Item{\textbf{Thesis:} Model-Based Collaborative-Filtering Recommender System to recommend top 5 movies for all users}
+            \Item{\textbf{Thesis Grade:} 19/20 (4/4), under the supervision of \emph{Dr. Javad Hamidzadeh}}
+            %\Item{\textbf{Thesis Description:} Used Matrix-Factorization Model-Based Collaborative-Filtering approach on \emph{MovieLens 20M dataset} to implement a recommender system which recommends top 5 movies for every single user, Under the supervision of \emph{Dr. Javad Hamidzadeh}}
         \ListEnd
 
     \ListEnd 
