--- a/section/interests.tex
+++ b/section/interests.tex
@@ -1,10 +1,17 @@
 %----------- Research Interests Section ------------
 
 \section{Research Interests}
-    \ListStartLineBullet
-        \Item{Machine Learning}
-        \Item{Deep Learning}
-        \Item{Soft Computing}
-        \Item{Recommender Systems}
-        \Item{Big Data Analytics}
-    \ListEnd 
+\MulticolStart
+    \Item{Machine Learning}
+    \Item{Computer Vision}
+\MulticolEnd
+\hspace{.1\textwidth}
+\MulticolStart
+    \Item{Deep Learning}
+    \Item{Recommender Systems}
+\MulticolEnd
+\hspace{.1\textwidth}
+\MulticolStart
+    \Item{Pattern Recognition}
+\MulticolEnd
+\vspace{5pt}
