--- a/section/language.tex
+++ b/section/language.tex
@@ -4,11 +4,11 @@
     \ListStartLineBullet
 
         \Item{\textbf{English:} Professional Working Proficiency}
-            \ListStartDash
+            %\ListStartDash
                 %\Item{IELTS: overall 7.5 (Listening:8, Reading:7.5, Speaking:7, Writing:7)}
-                \vspace{-6pt}\Item{IELTS Academic Will be taken on October 30, 2021}
+                %\vspace{-6pt}\Item{IELTS Academic Will be taken on October 30, 2021}
                 %\Item{GRE General Will be taken on November 1, 2021}
-            \ListEnd
+            %\ListEnd
 
         \Item{\textbf{French:} Elementary Proficiency}
 
