--- a/section/skills.tex
+++ b/section/skills.tex
@@ -7,13 +7,13 @@
         \skillbox{Python} \skillbox{MATLAB} \skillbox{Dart} \skillbox{C++} \skillbox{SQL}
 
     \resumeSkillItemStart{Data Science Libraries:}
-        \skillbox{NumPy} \skillbox{Pandas} \skillbox{Scikit-Learn} \skillbox{Matplotlib} \skillbox{Seaborn} \skillbox{Streamlit}
+        \skillbox{Scikit-Learn} \skillbox{Pandas} \skillbox{NumPy} \skillbox{Matplotlib} \skillbox{Seaborn} \skillbox{Streamlit}
 
-    \resumeSkillItemStart{Markup Languages:}
-        \skillbox{\LaTeX{}} \skillbox{HTML} \skillbox{Markdown}
+    %\resumeSkillItemStart{Markup Languages:}
+        %\skillbox{\LaTeX{}} \skillbox{HTML} \skillbox{Markdown}
 
     \resumeSkillItemStart{Web and Application Frameworks:}
-        \skillbox{Flask} \skillbox{Flutter} \skillbox{ASP .NET}
+        \skillbox{Flutter} \skillbox{Flask} \skillbox{ASP .NET}
 
     \resumeSkillItemStart{Softwares and Tools:}
-         \skillbox{Anaconda} \skillbox{Jupyter Notebook} \skillbox{Visual Studio}  \skillbox{Arduino} \skillbox{Postman} \skillbox{Git} \skillbox{Docker} 
+         \skillbox{Anaconda} \skillbox{Jupyter Notebook} \skillbox{Visual Studio}  \skillbox{Arduino} \skillbox{Postman} \skillbox{Git}
