--- a/section/workshops.tex
+++ b/section/workshops.tex
@@ -8,9 +8,9 @@
 
             \vspace{2pt}\Item{\textbf{Deep Learning for Image Processing}, \emph{6\textsuperscript{th} Conference on Signal Processing and Intelligent Systems (ICSPIS 2020), Sadjad University of Technology}, one-day online workshop, 2020}
 
-            \vspace{4pt}\Item{\textbf{Principles of writing a scientific paper}, \emph{Dentistry Department of Ferdowsi University of Mashhad}, two-week online workshop, 2020}
+            \vspace{4pt}\Item{\textbf{Principles of Writing a Scientific Paper}, \emph{Dentistry Department of Ferdowsi University of Mashhad}, two-week online workshop, 2020}
 
-            \vspace{4pt}\Item{\textbf{Mobile Application Development with React-Native}, \emph{Scientific Society of Sadjad University of Technology}, two-week workshop, 2018}
+            %\vspace{4pt}\Item{\textbf{Mobile Application Development with React-Native}, \emph{Scientific Society of Sadjad University of Technology}, two-week workshop, 2018}
 
         \ListEnd
 
