--- a/style/packages.tex
+++ b/style/packages.tex
@@ -15,4 +15,5 @@
 \usepackage{xcolor} % colors
 \usepackage{tcolorbox,changepage} % colorbox
 \usepackage{ragged2e} % justify
-\usepackage[T1]{fontenc} % underscore in email
+\usepackage[T1]{fontenc} % underscore in email 
+\usepackage{varwidth} % for mulitcolumn
