--- a/section/contact.tex
+++ b/section/contact.tex
@@ -1,12 +1,12 @@
 %----------------- Contact Section -----------------
 
 \coloredbox{Ali Tabaraei}
-\vspace{10pt}
+\vspace{5pt}
 
 \social{Phone}{(+98) 938 878 7118}
 \social{Email}{ali.tabaraeii@gmail.com}
 \social{Website}{\href{https://tabaraei.com}{tabaraei.com}}
 \social{GitHub}{\href{https://github.com/tabaraei}{github.com/tabaraei}}
 \social{LinkedIn}{\href{https://linkedin.com/in/tabaraei}{linkedin.com/in/tabaraei}}
-\social{Stack Overflow}{\href{https://stackoverflow.com/users/13836545/tabaraei}{stackoverflow.com/users/13836545/tabaraei}}
-\vspace{20pt} 
+%\social{Stack Overflow}{\href{https://stackoverflow.com/users/13836545/tabaraei}{stackoverflow.com/users/13836545/tabaraei}}
+\vspace{10pt} 
