--- a/section/industry.tex
+++ b/section/industry.tex
@@ -8,11 +8,10 @@
             {Khorasan Science and Technology Park}{Full-Time}
         \ListStartLineDash
             \Item{Gained experience with the most popular Date Science libraries in Python, such as NumPy, Pandas, Scikit-Learn, TensorFlow, Matplotlib, Seaborn, and many more, to manipulate and analyze the data, preprocess and visualize the data, train and test the models, and deploy them}
-            \Item{Used Python Flask framework to implement web-service API’s and run the project on docker container}
-            \Item{Developed Python scripts to automate installation and execution of some projects as a Windows service or Linux daemon}
             \Item{Handled SQL queries from Python on different RDBM’s, such as MySQL, SQL-Server and SQLite}
-            \Item{Managed requests and queries with Postman and Insomnia applications}
-            \Item{Used GitLab for version control and team collaboration}
+            \Item{Developed Python scripts to automate installation and execution of some projects as a Windows service or Linux daemon, or running them on a Docker container}
+            %\Item{Managed requests and queries with Postman and Insomnia applications}
+            %\Item{Used GitLab for version control and team collaboration}
         \ListEnd
 
         \vspace{5pt}
@@ -21,10 +20,10 @@
             {Arashweb LLC.}{Internship}
         \ListStartLineDash
             \Item{Developed an application in the field of literature and Iranian poets from scratch}
-            \Item{Used the cutting edge JWT token-based authentication techniques}
-            \Item{Used the BloC design pattern as a state management library to separate presentation from business logic, facilitating testability and reusability}
-            \Item{Implemented exception handling techniques to provide a reliable service under unexpectable circumstances}
-            \Item{Managed and tracked the tasks with Trello}
+            \Item{Used the cutting-edge techniques such as JWT token-based authentication and BloC design pattern}
+            %\Item{Used the BloC design pattern as a state management library to separate presentation from business logic, facilitating testability and reusability}
+            %\Item{Implemented exception handling techniques to provide a reliable service under unexpectable circumstances}
+            %\Item{Managed and tracked the tasks with Trello}
         \ListEnd
 
         \vspace{5pt}
@@ -35,6 +34,6 @@
         \ListStartLineDash
             \Item{Developed an application in the field of health and wellness}
             \Item{Offered a better user interface plan for new application to the team}
-            \Item{Experienced my first programming team work}
+            %\Item{Experienced my first programming team work}
         \ListEnd
     \ListEnd
