--- a/section/leadership.tex
+++ b/section/leadership.tex
@@ -3,7 +3,7 @@
 \section{Leadership Experience}
     \ListStartLineBullet
 
-        \Item{\textbf{Head of article layout team} at executive committee in the 6\textsuperscript{th} Conference on \emph{Signal Processing and Intelligent Systems (ICSPIS 2020), Sadjad University of Technology,} 2020 \bracketlink{http://icspis.ir}{website}}
+        \Item{\textbf{Head of article layout team} at executive committee in the 6\textsuperscript{th} Conference on \emph{Signal Processing and Intelligent Systems (ICSPIS 2020), Sadjad University of Technology,} 2020 \bracketlink{http://icspis.ir/icspis2020}{website}}
 
         \Item{\textbf{Executive team leader} at 5\textsuperscript{th} \emph{Sadjad I/O event, Sadjad University of Technology,} 2018}
 
