--- a/section/projects.tex
+++ b/section/projects.tex
@@ -9,10 +9,10 @@
             \Item{Designed and developed an intelligent system to monitor and control a remote greenhouse}
             \Item{Track and control hardware via mobile application, Telegram bot, and text message (SMS)}
         \ListEnd
-        
+
         \Item{\textbf{Multimedia Systems course} $|$ \emph{MATLAB} \bracketlink{https://github.com/tabaraei/Speech-Recognition}{GitHub}\vspace{-8pt}}
         \ListStartLineBulletTiny
-            \Item{Implemented a speech recognition application in MATLAB to recognize ``Hi'' from ``Bye'' with supervised learning using SVM classifier}
+            \Item{Implemented a speech recognition application in MATLAB to recognize different audio categories with supervised learning, using SVM classifier}
             \Item{Used MATLAB app designer to create an application with user interface}
         \ListEnd
 
