order of some sections were changed

--- a/section/certificates.tex
+++ b/section/certificates.tex
@@ -2,15 +2,15 @@
 
 \section{Certificates}
     \ListStartLineBullet
-    
+
         \Item{\textbf{Machine Learning in Python with Scikit-Learn} by \emph{Inria} on \emph{France Université Numérique MOOC Platform} \\
         Certificate earned on June 15, 2021 \bracketlink{https://lms.fun-mooc.fr/media/attestations/attestation_suivi_course-v1:inria+41026+session01_5df3d776dd49e305852794eef8fee2f9.pdf}{credential}}
 
         \Item{\textbf{Machine Learning} by \emph{Stanford University} on \emph{Coursera} \\
         Certificate earned on May 30, 2021 \bracketlink{https://www.coursera.org/account/accomplishments/verify/QKPK27MRNHHL}{credential}}
 
-        \Item{\textbf{Introduction to Machine Learning} by \emph{Duke University} on \emph{Coursera} \\
-        Certificate earned on April 28, 2021 \bracketlink{https://www.coursera.org/account/accomplishments/verify/HJCV2USBEU3N}{credential}}
+        %\Item{\textbf{Introduction to Machine Learning} by \emph{Duke University} on \emph{Coursera} \\
+        %Certificate earned on April 28, 2021 \bracketlink{https://www.coursera.org/account/accomplishments/verify/HJCV2USBEU3N}{credential}}
 
         \Item{\textbf{Mathematics for Machine Learning} by \emph{Imperial College London} on \emph{Coursera} \\
         Certificate earned on November 29, 2020 \bracketlink{https://www.coursera.org/account/accomplishments/specialization/G8MYTCHSKK5Z}{credential}}
