--- a/section/industry.tex
+++ b/section/industry.tex
@@ -19,21 +19,21 @@
             {Flutter Developer}{Jan 2020 -- Sep 2020}
             {Arashweb LLC.}{Internship}
         \ListStartLineDash
-            \Item{Developed an application in the field of literature and Iranian poets from scratch}
+            \Item{Developed a mobile application in the field of literature and Iranian poets from scratch}
             \Item{Used the cutting-edge techniques such as JWT token-based authentication and BloC design pattern}
             %\Item{Used the BloC design pattern as a state management library to separate presentation from business logic, facilitating testability and reusability}
             %\Item{Implemented exception handling techniques to provide a reliable service under unexpectable circumstances}
             %\Item{Managed and tracked the tasks with Trello}
         \ListEnd
 
-        \vspace{5pt}
-        \timeline[\bracketlink{http://whitedesigners.ir}{website}]
-            {Flutter Developer}{Jul 2019 -- Sep 2019}
-            {White Designers Studio}{Internship}
+        %\vspace{5pt}
+        %\timeline[\bracketlink{http://whitedesigners.ir}{website}]
+            %{Flutter Developer}{Jul 2019 -- Sep 2019}
+            %{White Designers Studio}{Internship}
 
-        \ListStartLineDash
-            \Item{Developed an application in the field of health and wellness}
-            \Item{Offered a better user interface plan for new application to the team}
+        %\ListStartLineDash
+            %\Item{Developed an application in the field of health and wellness}
+            %\Item{Offered a better user interface plan for new application to the team}
             %\Item{Experienced my first programming team work}
-        \ListEnd
+        %\ListEnd
     \ListEnd
