--- a/section/industry.tex
+++ b/section/industry.tex
@@ -4,7 +4,7 @@
     \ListStartLineBullet
 
         \timeline[\bracketlink{https://www.kstp.ir/en/page/about-us}{website}]
-            {Data Mining and Machine Learning Engineer}{Feb 2021 -- Present}
+            {Data Mining and Machine Learning Developer}{Feb 2021 -- Present}
             {Khorasan Science and Technology Park}{Full-Time}
         \ListStartLineDash
             \Item{Gained experience with the most popular Date Science libraries in Python, such as NumPy, Pandas, Scikit-Learn, TensorFlow, Matplotlib, Seaborn, and many more, to manipulate and analyze the data, preprocess and visualize the data, train and test the models, and deploy them}
