--- a/section/projects.tex
+++ b/section/projects.tex
@@ -4,7 +4,7 @@
 
     \ListStartLineSimple
 
-        \Item{\textbf{Internet of Things course} $|$ \emph{C, Python, Django, Flutter} \bracketlink{https://github.com/tabaraei/Smart-Greenhouse}{GitHub}\vspace{-8pt}}
+        \Item{\textbf{Object Oriented Internet course} $|$ \emph{C, Python, Django, Flutter} \bracketlink{https://github.com/tabaraei/Smart-Greenhouse}{GitHub}\vspace{-8pt}}
         \ListStartLineBulletTiny
             \Item{Designed and developed an intelligent system to monitor and control a remote greenhouse}
             \Item{Track and control hardware via mobile application, Telegram bot, and text message (SMS)}
@@ -22,7 +22,7 @@
             \Item{Developed several neural network algorithms, including Genetic, MLP, Adaline, and Perceptron}
         \ListEnd
 
-        \Item{\textbf{Web course} $|$ \emph{ASP.NET MVC5, HTML, CSS, JavaScript} \bracketlink{https://github.com/tabaraei/ASP.NET-MVC-5}{GitHub}\vspace{-8pt}}
+        \Item{\textbf{Web Programming course} $|$ \emph{ASP.NET MVC5, HTML, CSS, JavaScript} \bracketlink{https://github.com/tabaraei/ASP.NET-MVC-5}{GitHub}\vspace{-8pt}}
         \ListStartLineBulletTiny
             \Item{Developed a website with authentication and authorization methods, email service, input validation, security control, database management, and CRUD operations in the admin panel}
         \ListEnd
