--- a/section/references.tex
+++ b/section/references.tex
@@ -2,16 +2,16 @@
 
 \section{References}
     \ListStartLineBullet
-    
-        \Item{\emph{Dr. Javad Hamidzadeh}, Associate Professor at Computer and Information Technology Department \\
+
+        \Item{\emph{Dr. Javad Hamidzadeh}, Associate Professor at Computer and Information Technology Department, \\
         \emph{Sadjad University of Technology, Mashhad, Iran} \\
         \textbf{Email:} \textsf{J\_hamidzadeh@sadjad.ac.ir}}
 
-        \Item{\emph{Dr. Reza Shamsaee}, Assistant Professor at Computer and Information Technology Department \\
+        \Item{\emph{Dr. Reza Shamsaee}, Assistant Professor at Computer and Information Technology Department, \\
         \emph{Sadjad University of Technology, Mashhad, Iran} \\
         \textbf{Email:} \textsf{r\_shamsaee@sadjad.ac.ir}}
 
-        \Item{\emph{Dr. Behzad Bakhtiari}, Assistant Professor at Computer and Information Technology Department \\
+        \Item{\emph{Dr. Behzad Bakhtiari}, Assistant Professor at Computer and Information Technology Department, \\
         \emph{Sadjad University of Technology, Mashhad, Iran} \\
         \textbf{Email:} \textsf{bakhtiari@sadjad.ac.ir}}
 
