--- a/section/teaching.tex
+++ b/section/teaching.tex
@@ -2,11 +2,11 @@
 
 \section{Teaching Experience}
     \ListStartLineBullet
-        
+
         \timeline[\bracketlink{https://www.youtube.com/channel/UCGeMEG_QxSsuxrJ-xZHtRFA}{YouTube}]
             {Course Instructor}{May 2020 -- Jul 2020}
             {Mobile Application Development with Flutter}{Part-Time}
-        
+
         \vspace{5pt}
         \timeline
             {Teaching Assistant}{Sep 2017 -- Jan 2020}
@@ -16,8 +16,8 @@
 
         \ListStartLineDash
             \Item{Artificial Intelligence, under the supervision of Dr. Reza Shamsaee (2 separate classes)}
-            \Item{Algorithm Design, under the supervision of Dr. Javad Hamidzadeh (2 separate classes)}
-            \Item{Algorithm Design, under the supervision of Dr. Mahdi Salkhorde Haghighi (1 class)}
+            \Item{Algorithms Design, under the supervision of Dr. Javad Hamidzadeh (2 separate classes)}
+            \Item{Algorithms Design, under the supervision of Dr. Mahdi Salkhorde Haghighi (1 class)}
             \Item{Discrete Mathematics, under the supervision of Dr. Saeed Yazdanian (2 separate classes)}
         \ListEnd
 
