--- a/section/workshops.tex
+++ b/section/workshops.tex
@@ -21,9 +21,9 @@
 
             \vspace{2pt}\Item{\textbf{Computer Vision course:} Presented a paper called \emph{``A computer vision system for defect discrimination and grading in tomatoes using machine learning and image processing''}, 2020}
 
-            \vspace{4pt}\Item{\textbf{Internet of Things course:} A presentation was given on \emph{``what is API and how to connect a mobile application to embedded hardware core''}, 2020}
+            \vspace{4pt}\Item{\textbf{Object Oriented Internet course:} A presentation was given on \emph{``what is API and how to connect a mobile application to embedded hardware core''}, 2020}
 
-            \vspace{4pt}\Item{\textbf{Seminar course:} A presentation was given on \emph{``React-Native vs. Flutter framework for mobile application development''}, 2019}
+            \vspace{4pt}\Item{\textbf{Presentation and Research Methodology course:} A presentation was given on \emph{``React-Native vs. Flutter framework for mobile application development''}, 2019}
 
         \ListEnd
     \ListEnd 
