--- a/section/interests.tex
+++ b/section/interests.tex
@@ -3,15 +3,15 @@
 \section{Research Interests}
 \MulticolStart
     \Item{Machine Learning}
-    \Item{Computer Vision}
+    \Item{Pattern Recognition}
 \MulticolEnd
 \hspace{.1\textwidth}
 \MulticolStart
-    \Item{Deep Learning}
+    \Item{Deep Neural Networks}
     \Item{Recommender Systems}
 \MulticolEnd
 \hspace{.1\textwidth}
 \MulticolStart
-    \Item{Pattern Recognition}
+    \Item{Computer Vision}
 \MulticolEnd
-\vspace{5pt}
+\vspace{5pt} 
