--- a/section/interests.tex
+++ b/section/interests.tex
@@ -3,12 +3,12 @@
 \section{Research Interests}
 \MulticolStart
     \Item{Machine Learning}
-    \Item{Pattern Recognition}
+    \Item{Recommender Systems}
 \MulticolEnd
 \hspace{.1\textwidth}
 \MulticolStart
     \Item{Deep Neural Networks}
-    \Item{Recommender Systems}
+    \Item{Data Mining}
 \MulticolEnd
 \hspace{.1\textwidth}
 \MulticolStart
