ielts added, cv reviewed

--- a/section/industry.tex
+++ b/section/industry.tex
@@ -7,20 +7,30 @@
             {Data Mining and Machine Learning Developer}{Feb 2021 -- Present}
             {Khorasan Science and Technology Park}{Full-Time}
         \ListStartLineDash
-            \Item{Gained experience with the most popular Date Science libraries in Python, such as NumPy, Pandas, Scikit-Learn, TensorFlow, Matplotlib, Seaborn, and many more, to manipulate and analyze the data, preprocess and visualize the data, train and test the models, and deploy them}
-            \Item{Handled SQL queries from Python on different RDBM’s, such as MySQL, SQL-Server and SQLite}
-            \Item{Developed Python scripts to automate installation and execution of some projects as a Windows service or Linux daemon, or running them on a Docker container}
+            \vspace{-5pt}
+            \Item{Retrieved, cleaned, preprocessed, and analyzed tabular/textual data}
+            \Item{Developed several supervised and unsupervised learning algorithms}
+            \Item{Handled SQL queries on different RDBMs (MySQL, SQL-Server, SQLite)}
+            \Item{Visualized or represented data using web applications or web APIs}
+            \Item{Automated installation/execution of projects using Linux daemons, Windows services, or Docker containers}
+
+            %\Item{Gained experience with the most popular Date Science libraries in Python, such as NumPy, Pandas, Scikit-Learn, TensorFlow, Matplotlib, Seaborn, and many more, to manipulate and analyze the data, preprocess and visualize the data, train and test the models, and deploy them}
+            %\Item{Handled SQL queries from Python on different RDBM’s, such as MySQL, SQL-Server and SQLite}
+            %\Item{Developed Python scripts to automate installation and execution of some projects as a Windows service or Linux daemon, or running them on a Docker container}
             %\Item{Managed requests and queries with Postman and Insomnia applications}
             %\Item{Used GitLab for version control and team collaboration}
         \ListEnd
 
-        \vspace{5pt}
+        \vspace{-5pt}
         \timeline[\bracketlink{https://arashweb.com}{website}]
             {Flutter Developer}{Jan 2020 -- Sep 2020}
             {Arashweb LLC.}{Internship}
         \ListStartLineDash
-            \Item{Developed a mobile application in the field of literature and Iranian poets from scratch}
-            \Item{Used the cutting-edge techniques such as JWT token-based authentication and BloC design pattern}
+            \vspace{-5pt}
+            \Item{Developed a mobile application in Flutter, using BloC design pattern and JWT token-based authentication}
+
+            %\Item{Developed a mobile application in the field of literature and Iranian poets from scratch}
+            %\Item{Used the cutting-edge techniques such as JWT token-based authentication and BloC design pattern}
             %\Item{Used the BloC design pattern as a state management library to separate presentation from business logic, facilitating testability and reusability}
             %\Item{Implemented exception handling techniques to provide a reliable service under unexpectable circumstances}
             %\Item{Managed and tracked the tasks with Trello}
