--- a/section/interests.tex
+++ b/section/interests.tex
@@ -1,6 +1,7 @@
 %----------- Research Interests Section ------------
 
 \section{Research Interests}
+\vspace{-10pt}
 \MulticolStart
     \Item{Machine Learning}
     \Item{Recommender Systems}
