--- a/section/language.tex
+++ b/section/language.tex
@@ -5,8 +5,7 @@
 
         \Item{\textbf{English:} Professional Working Proficiency}
             \ListStartDash
-                %\Item{IELTS: overall 7.5 (Listening:8, Reading:7.5, Speaking:7, Writing:7)}
-                \vspace{-6pt}\Item{IELTS Academic will be taken on October 30, 2021}
+                \vspace{-6pt}\Item{IELTS Academic: Overall 7 (L:6.5, R:8, S:7, W:7)}
                 %\Item{GRE General Will be taken on November 1, 2021}
             \ListEnd
 
