--- a/section/projects.tex
+++ b/section/projects.tex
@@ -4,25 +4,29 @@
 
     \ListStartLineSimple
 
-        \Item{\textbf{Object Oriented Internet course} $|$ \emph{C, Python, Django, Flutter} \bracketlink{https://github.com/tabaraei/Smart-Greenhouse}{GitHub}\vspace{-8pt}}
+        \Item{\textbf{``Object Oriented Internet'' Course} $|$ \emph{C, Python, Django, Flutter} \bracketlink{https://github.com/tabaraei/Smart-Greenhouse}{GitHub}\vspace{-8pt}}
         \ListStartLineBulletTiny
-            \Item{Designed and developed an intelligent system to monitor and control a remote greenhouse}
-            \Item{Track and control hardware via mobile application, Telegram bot, and text message (SMS)}
+            \Item{Designed an IoT system to track and control a remote greenhouse via mobile application, Telegram bot, and text message (SMS)}
+
+            %\Item{Designed and developed an intelligent system to monitor and control a remote greenhouse}
+            %\Item{Track and control hardware via mobile application, Telegram bot, and text message (SMS)}
         \ListEnd
 
-        \Item{\textbf{Multimedia Systems course} $|$ \emph{MATLAB} \bracketlink{https://github.com/tabaraei/Speech-Recognition}{GitHub}\vspace{-8pt}}
+        \Item{\textbf{``Multimedia Systems'' Course} $|$ \emph{MATLAB} \bracketlink{https://github.com/tabaraei/Speech-Recognition}{GitHub}\vspace{-8pt}}
         \ListStartLineBulletTiny
             \Item{Implemented a speech recognition application in MATLAB to recognize different audio categories with supervised learning, using SVM classifier}
-            \Item{Used MATLAB app designer to create an application with user interface}
+
+            %\Item{Implemented a speech recognition application in MATLAB to recognize different audio categories with supervised learning, using SVM classifier}
+            %\Item{Used MATLAB app designer to create an application with user interface}
         \ListEnd
 
-        \Item{\textbf{Computational Intelligence course} $|$ \emph{MATLAB, Python} \bracketlink{https://github.com/tabaraei/8-Queens-Problem-Genteic-Algorithm}{GitHub} %\bracketlink{https://github.com/tabaraei/MLP-Implementation}{GitHub} \bracketlink{https://github.com/tabaraei/Adaline-Implementation}{GitHub}  \bracketlink{https://github.com/tabaraei/Perceptron-Implementation}{GitHub}
-        \vspace{-8pt}}
-        \ListStartLineBulletTiny
-            \Item{Developed several neural network algorithms, including Genetic, MLP, Adaline, and Perceptron}
-        \ListEnd
+        %\Item{\textbf{Computational Intelligence course} $|$ \emph{MATLAB, Python} \bracketlink{https://github.com/tabaraei/8-Queens-Problem-Genteic-Algorithm}{GitHub} %\bracketlink{https://github.com/tabaraei/MLP-Implementation}{GitHub} \bracketlink{https://github.com/tabaraei/Adaline-Implementation}{GitHub}  \bracketlink{https://github.com/tabaraei/Perceptron-Implementation}{GitHub}
+        %\vspace{-8pt}}
+        %\ListStartLineBulletTiny
+            %\Item{Developed several neural network algorithms, including Genetic, MLP, Adaline, and Perceptron}
+        %\ListEnd
 
-        \Item{\textbf{Web Programming course} $|$ \emph{ASP.NET MVC5, HTML, CSS, JavaScript} \bracketlink{https://github.com/tabaraei/ASP.NET-MVC-5}{GitHub}\vspace{-8pt}}
+        \Item{\textbf{``Web Programming'' Course} $|$ \emph{C\# ASP.NET MVC5, HTML, CSS, JavaScript} \bracketlink{https://github.com/tabaraei/ASP.NET-MVC-5}{GitHub}\vspace{-8pt}}
         \ListStartLineBulletTiny
             \Item{Developed a website with authentication and authorization methods, email service, input validation, security control, database management, and CRUD operations in the admin panel}
         \ListEnd
