--- a/section/skills.tex
+++ b/section/skills.tex
@@ -16,4 +16,4 @@
         \skillbox{Flutter} \skillbox{Flask} \skillbox{ASP .NET}
 
     \resumeSkillItemStart{Softwares and Tools:}
-         \skillbox{Anaconda} \skillbox{Jupyter Notebook} \skillbox{Visual Studio}  \skillbox{Arduino} \skillbox{Microsoft Office} \skillbox{Postman} \skillbox{Git} 
+         \skillbox{Anaconda} \skillbox{Jupyter Notebook}  \skillbox{Arduino} \skillbox{\LaTeX{}} \skillbox{Microsoft Office} \skillbox{Postman} \skillbox{Git} 
