--- a/section/teaching.tex
+++ b/section/teaching.tex
@@ -15,10 +15,10 @@
         \vspace{2pt}(Tutored and guided over 400 students for a total of approximately 170 hours)\vspace{-10pt}
 
         \ListStartLineDash
-            \Item{Artificial Intelligence, under the supervision of Dr. Reza Shamsaee (2 separate classes)}
-            \Item{Algorithms Design, under the supervision of Dr. Javad Hamidzadeh (2 separate classes)}
-            \Item{Algorithms Design, under the supervision of Dr. Mahdi Salkhorde Haghighi (1 class)}
-            \Item{Discrete Mathematics, under the supervision of Dr. Saeed Yazdanian (2 separate classes)}
+            \Item{Artificial Intelligence, under the supervision of \emph{Dr. Reza Shamsaee} (2 separate classes)}
+            \Item{Algorithms Design, under the supervision of \emph{Dr. Javad Hamidzadeh} (2 separate classes)}
+            \Item{Algorithms Design, under the supervision of \emph{Dr. Mahdi Salkhorde Haghighi} (1 class)}
+            \Item{Discrete Mathematics, under the supervision of \emph{Dr. Saeed Yazdanian} (2 separate classes)}
         \ListEnd
 
     \ListEnd 
