--- a/section/workshops.tex
+++ b/section/workshops.tex
@@ -19,11 +19,11 @@
         \Item{\normalsize\textbf{Course Presentation}\vspace{-5pt}}
         \ListStartLineBulletTiny
 
-            \vspace{2pt}\Item{\textbf{Computer Vision course:} Presented a paper called \emph{``A computer vision system for defect discrimination and grading in tomatoes using machine learning and image processing''}, 2020}
+            \vspace{2pt}\Item{\textbf{``Computer Vision'' Course:} Presented a paper called \emph{``A computer vision system for defect discrimination and grading in tomatoes using machine learning and image processing''}, 2020}
 
-            \vspace{4pt}\Item{\textbf{Object Oriented Internet course:} A presentation was given on \emph{``what is API and how to connect a mobile application to embedded hardware core''}, 2020}
+            \vspace{4pt}\Item{\textbf{``Object Oriented Internet'' Course:} A presentation was given on \emph{``what is API and how to connect a mobile application to embedded hardware core''}, 2020}
 
-            \vspace{4pt}\Item{\textbf{Presentation and Research Methodology course:} A presentation was given on \emph{``React-Native vs. Flutter framework for mobile application development''}, 2019}
+            \vspace{4pt}\Item{\textbf{``Presentation and Research Methodology'' Course:} A presentation was given on \emph{``React-Native vs. Flutter framework for mobile application development''}, 2019}
 
         \ListEnd
     \ListEnd 
