ielts added, cv reviewed

--- a/section/volunteer.tex
+++ b/section/volunteer.tex
@@ -3,9 +3,9 @@
 \section{Volunteer Work}
     \ListStartLineBullet
 
-        \Item{Member of \emph{Sadjad I/O} Student Group (student group holding scientific events and conferences with the help of university faculty members), \emph{Sadjad University of Technology}, 2017 -- 2019}
+        \Item{Member of \emph{Sadjad I/O} Student Group (student group holding scientific events and conferences with the help of university faculty members), \emph{Sadjad University of Technology}, 2017--2019}
 
-        \Item{Member of \emph{Baran} Charity Student Group (student group helping homeless children with educational programs), \emph{Sadjad University of Technology}, 2016 -- 2018 \bracketlink{https://barang.ir}{website}}
+        \Item{Member of \emph{Baran} Charity Student Group (student group helping homeless children with educational programs), \emph{Sadjad University of Technology}, 2016--2018 \bracketlink{https://barang.ir}{website}}
 
         %\Item{Member of \emph{MehrYaran} Charity Group (a charity group to support older people and people with disabilities), \emph{private group}, 2016 -- 2017}
 
