added gre test date

--- a/section/language.tex
+++ b/section/language.tex
@@ -6,7 +6,7 @@
         \Item{\textbf{English:} Professional Working Proficiency}
             \ListStartDash
                 \vspace{-6pt}\Item{IELTS Academic: Overall 7 (L:6.5, R:8, S:7, W:7)}
-                %\Item{GRE General Will be taken on November 1, 2021}
+                \Item{GRE General: Will be taken in December}
             \ListEnd
 
         \Item{\textbf{French:} Elementary Proficiency}
