--- a/section/interests.tex
+++ b/section/interests.tex
@@ -9,7 +9,7 @@
 \hspace{.1\textwidth}
 \MulticolStart
     \Item{Deep Neural Networks}
-    \Item{Data Mining}
+    \Item{Cybersecurity}
 \MulticolEnd
 \hspace{.1\textwidth}
 \MulticolStart
