--- a/section/skills.tex
+++ b/section/skills.tex
@@ -4,7 +4,7 @@
     \vspace{-8pt}
 
     \resumeSkillItemStart{Programming Languages:}
-        \skillbox{Python} \skillbox{MATLAB} \skillbox{Dart} \skillbox{C++} \skillbox{SQL}
+        \skillbox{Python} \skillbox{MATLAB} \skillbox{Dart} \skillbox{C++} \skillbox{JavaScript} \skillbox{SQL}
 
     \resumeSkillItemStart{Data Science Libraries:}
         \skillbox{Scikit-Learn} \skillbox{Pandas} \skillbox{NumPy} \skillbox{Matplotlib} \skillbox{Seaborn} \skillbox{Streamlit}
