--- a/section/contact.tex
+++ b/section/contact.tex
@@ -6,7 +6,7 @@
 \social{Website}{\href{https://tabaraei.com}{tabaraei.com}}
 \social{LinkedIn}{\href{https://linkedin.com/in/tabaraei}{linkedin.com/in/tabaraei}}
 \social{GitHub}{\href{https://github.com/tabaraei}{github.com/tabaraei}}
-\social{StackOverflow}{\href{https://stackoverflow.com/users/13836545/tabaraei}{stackoverflow.com/tabaraei}}
+\social{StackOverflow}{\href{https://stackoverflow.com/users/13836545/tabaraei}{stackoverflow.com/users/13836545/tabaraei}}
 \social{Email}{ali.tabaraeii@gmail.com}
 \social{Phone}{(+98) 938 878 7118}
 \vspace{10pt} 
